--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update_image">Update Image</string>
+    <string name="change_image">Change Image</string>
+    <string name="title_activity_order">OrderActivity</string>
 
 </resources>
